syntax = "proto3";

message Player{
    int32 id = 1;
    repeated Vector3 playerPosition = 2;
    repeated Vector3 playerRotation = 3;
    repeated Vector3 playerScale = 4;
}

message Vector3{
    float x = 1;
    float y = 2;
    float z = 3;
}

message RequestPlayer{
    int32 requestPlayerID = 1;
}

message Response{
    string response = 1;
}


service multiUserSync{
    rpc getPlayer (stream RequestPlayer) returns (stream Player){}
    rpc setPlayer (stream Player) returns (stream Response){}
}