syntax = "proto3";

message User{
    int32 id = 1;
    Vector userPhysicalPosition = 2;
    Vector userVRPosition = 3;
    Quadrublet userRotation = 4;
}

message Tracker{
    int32 id = 1;
    Vector trackerPhysicalPosition = 2;
    Vector trackerVRPositon = 3;
    Quadrublet trackerRotation = 4;
}

message Vector{
    float x = 1;
    float y = 2;
    float z = 3;
}

message Quadrublet{
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message RequestUser{
    int32 requestUserID = 1;
}

message RequestTracker{
    int32 requestTrackerID = 1;
}

message Response{
    string response = 1;
}


service multiUserSync{
    rpc getUser (RequestUser) returns (User){}
    rpc setUser (User) returns (Response){}
    rpc getTracker (RequestTracker) returns (Tracker){}
    rpc setTracker (Tracker) returns (Response){}

}